Mudanças 05/08/2025 implementado completamente o JSON. Para próxima: Fazer com que o arquivo salve em formatação legal

--- a/CRUD_Colegial.dproj
+++ b/CRUD_Colegial.dproj
@@ -124,15 +124,9 @@
             <MainSource>MainSource</MainSource>
         </DelphiCompile>
         <DCCReference Include="CRUDColegial.pas">
-            <Form>FColegio_CRUD</Form>
-            <FormType>dfm</FormType>
+            <Form>,
+  UChamarArquivoJSON in &apos;UChamarArquivoJSON.pas&apos;</Form>
         </DCCReference>
-        <DCCReference Include="estudantes.pas"/>
-        <DCCReference Include="professores.pas"/>
-        <DCCReference Include="disciplinas.pas"/>
-        <DCCReference Include="turmas.pas"/>
-        <DCCReference Include="matriculas.pas"/>
-        <DCCReference Include="UChamarArquivoJSON.pas"/>
         <BuildConfiguration Include="Base">
             <Key>Base</Key>
         </BuildConfiguration>
